export enum AppRoutes {
  LOGIN_SCREEN = "Login",
  TERMS_SCREEN = "Terms",
  STARSHIP_FEED_SCREEN = "Starships",
  STARSHIP_STACK = "Starships Stack",
  STARSHIP_DETAILS_SCREEN = "Starship",
  PILOT_SCREEN = "Pilots",
  PILOT_STACK = "Pilots Stack",
  PILOT_DETAILS_SCREEN = "Pilot",
}
